# mcmodtracker

./: README.md  pyproject.toml
db/: big.yaml  biomes.yaml  blocks.yaml  cobblemon.yaml  mobs.yaml  other.yaml  untested.yaml  worldgen.yaml
mcmodtracker/: __SLUG_TO_MODID.txt  __SLUG_TO_VERSION.yaml  _common.py  _get_project.py  _mod.py  _scanner.py  _search.py  example.yaml
